--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
           protocol: ftps
           port: 21
           password: ${{ secrets.ftp_password }}
-          local-dir: ./build/
+          local-dir: ./.next/
           server-dir: pch.wales/
